--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,127 @@
+@import "./reset.scss";
+
+$gray: #dee2e2;
+
 body {
-  background-color: tomato;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #bcbfbf;
+}
+
+.phone {
+  width: 480px;
+  height: 90%;
+  border-radius: 10px;
+  background-color: #c6caca;
+  box-shadow: 5px 10px 10px rgba($color: #000000, $alpha: 0.5);
+}
+
+.header {
+  padding: 50px 30px 20px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .header__btn,
+  .header__title {
+    width: 33%;
+  }
+  .header__btn .fa-bars {
+    margin-left: 10px;
+  }
+  .header__title {
+    font-weight: bold;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+  }
+  .header__btn:last-child {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+
+.total {
+  background-color: #1f1414;
+  padding: 30px;
+  color: $gray;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 5px 0;
+  font-weight: bold;
+  .total__price {
+    font-size: 22px;
+  }
+  .total__subtitle {
+    font-size: 14px;
+  }
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-color: #c6caca;
+  .item {
+    border-top: 3px solid black;
+    position: relative;
+    .item__info {
+      background-color: #d7dbdb;
+      padding: 20px 30px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      .item__info-col {
+        font-weight: bold;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        &:last-child {
+          align-items: flex-end;
+        }
+        .item__title {
+          font-size: 26px;
+          text-transform: uppercase;
+        }
+        .item__subtitle {
+          font-size: 14px;
+        }
+        .item__total-price {
+          font-size: 22px;
+        }
+        .item__piece-price {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+.item__specs {
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 135px);
+  background-color: #d7dbdb;
+  .spec {
+    padding: 25px;
+    display: flex;
+    font-weight: bold;
+    flex-direction: column;
+    justify-content: center;
+    &:last-child {
+      border-left: 3px solid black;
+    }
+  }
+}
+
+.item__photo {
+  position: absolute;
+  width: 35%;
+  height: 70%;
+  border: 3px solid black;
+  right: 30px;
+  bottom: 0px;
+  object-fit: cover;
 }
